XCOMMONS-3594: Make a lot easier to protect against resource path traversal (#1675)
* add APIs to indicate a folder in which the resource must be located
* make Environment API more explicit regarding the fact that they can return null

---------

Co-authored-by: Michael Hamann <michael.hamann@xwiki.com>
(cherry picked from commit 29194fd29de2d782957e8c7b8a751eab49769614)